add call to action

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,6 +30,12 @@
         <h1>{{ config.title }}</h1>
           {{ macro::tree() }}
       {% endblock nav %}
+
+        <div>
+          <br />
+          <strong>Seeking complete enterprise perception?</strong>
+          <p>Meet <a href="https://www.highlighter.ai/">highlighter.ai</a> in person.  <a href="https://www.highlighter.ai/book-a-demo">Register</a></p>
+        </div>
       </nav>
 
       <main>
